--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "start:dev": "tsx src/server.ts",
+    "start:dev": "tsx --env-file=.env src/server.ts",
     "start:watch": "tsx  watch src/server.ts",
     "dist": "tsup src",
     "start:dist": "npm run dist && node/server.js"
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/RenanMarinho809/GERENCIADOR_PODCAST#readme",
   "description": "",
   "devDependencies": {
+    "@types/node": "^22.10.5",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
